--- a/css/_statistics.scss
+++ b/css/_statistics.scss
@@ -1,5 +1,5 @@
 .statistics {
-  background-image: url("/img/coffee-caps.jpg");
+  background-image: url("./img/coffee-caps.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   position: relative;
