--- a/css/style.css
+++ b/css/style.css
@@ -720,7 +720,7 @@ body {
   z-index: -1;
   content: "";
   border: solid 10px rgba(0, 0, 0, 0.2);
-  background-image: url("/img/about.jpg");
+  background-image: url("./img/about.jpg");
   background-repeat: no-repeat;
   background-size: auto 100%;
 }
@@ -992,7 +992,7 @@ body {
 }
 
 .statistics {
-  background-image: url("/img/coffee-caps.jpg");
+  background-image: url("./img/coffee-caps.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   position: relative;
@@ -1108,7 +1108,7 @@ body {
   content: "";
   width: 100%;
   height: 273px;
-  background-image: url("/img/cake-1.jpg");
+  background-image: url("./img/cake-1.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   top: 50px;
@@ -1302,7 +1302,7 @@ body {
 
 .testimonials .slider-img {
   border: solid 10px rgba(0, 0, 0, 0.2);
-  background-image: url("/img/cake.jpg");
+  background-image: url("./img/cake.jpg");
   background-size: contain;
 }
 
