--- a/css/_about-info.scss
+++ b/css/_about-info.scss
@@ -21,7 +21,7 @@
       z-index: -1;
       content: "";
       border: solid 10px rgba(0, 0, 0, 0.2);
-      background-image: url("./img/about.jpg");
+      background-image: url("../img/about.jpg");
       background-repeat: no-repeat;
       background-size: auto 100%;
     }
