--- a/css/_steps-work.scss
+++ b/css/_steps-work.scss
@@ -26,7 +26,7 @@
       content: "";
       width: 100%;
       height: 273px;
-      background-image: url("./img/cake-1.jpg");
+      background-image: url("../img/cake-1.jpg");
       background-repeat: no-repeat;
       background-size: 100%;
       top: 50px;
