--- a/css/_testimonials.scss
+++ b/css/_testimonials.scss
@@ -15,7 +15,7 @@
   }
   .slider-img {
     border: solid 10px rgba(0, 0, 0, 0.2);
-    background-image: url("./img/cake.jpg");
+    background-image: url("../img/cake.jpg");
     background-size: contain;
     img {
       width: 100%;
