--- a/css/_font.scss
+++ b/css/_font.scss
@@ -26,16 +26,24 @@
   line-height: 27px;
 }
 .title-block {
-  font-size: 50px;
+  font-size: 36px;
   font-weight: 500;
-  margin-bottom: 36px;
+  margin-bottom: 24px;
   text-align: center;
+  @media (min-width: 787px) {
+    font-size: 50px;
+    margin-bottom: 36px;
+  }
 }
 .title-description {
-  font-size: 18px;
-  font-weight: 400px;
-  margin-bottom: 70px;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 40px;
   text-align: center;
+  @media (min-width: 787px) {
+    font-size: 18px;
+    margin-bottom: 70px;
+  }
 }
 .start-title {
   font-size: 60px;
@@ -88,6 +96,7 @@
 .select-form label {
   font-size: 25px;
   line-height: 26px;
+  
 }
 .article-author {
   font-size: 15px;
@@ -119,11 +128,14 @@
   }
 }
 .title-subscribe {
-  font-size: 30px;
+  font-size: 24px;
+  @media (min-width: 787px) {
+    font-size: 30px;
+  }
 }
 .order input,
 .order textarea,
-.subscribe .subscribe-item {
+.subscribe-item {
   font-size: 16px;
 }
 .foo-container .foo-title,
