--- a/css/_general.scss
+++ b/css/_general.scss
@@ -12,9 +12,8 @@ body {
   font-weight: 600;
   font-size: 16px;
   text-transform: uppercase;
-  height: 50px;
-  border-radius: 25px;
-  padding: 0 30px;
+  border-radius: calc((16px + 30px)/2);
+  padding: 15px 30px;
   outline: none;
   color: #ffffff;
   background-color: $red;
