--- a/css/_order.scss
+++ b/css/_order.scss
@@ -7,9 +7,13 @@
     color: $grayTextLight;
   }
   .order-container {
-    width: 60%;
+    width: 90%;
     margin: 0 auto;
-    padding: 150px 0;
+    padding: 50px 0;
+    @media (min-width: 960px){
+      width: 60%;
+      padding: 150px 0 120px;
+    }
   }
   form {
     font-size: 0;
@@ -17,7 +21,7 @@
     text-align: center;
   }
   .form-item,
-  .form-messadge {
+  .form-message {
     padding: 14px;
     text-align: center;
     border: solid 1px #efefef;
@@ -25,13 +29,17 @@
     outline: none;
   }
   .form-item {
-    width: 47%;
+    width: 100%;
     margin-bottom: 24px;
-    &:nth-child(2n-1) {
-      margin-right: 6%;
+    @media (min-width: 670px){
+      width: 47%;
+      margin-bottom: 24px;
+      &:nth-child(2n-1) {
+        margin-right: 6%;
+      }
     }
   }
-  .form-messadge {
+  .form-message {
     width: 100%;
     height: 200px;
     margin-bottom: 50px;
